--- a/.github/workflows/ethsign.yml
+++ b/.github/workflows/ethsign.yml
@@ -2,7 +2,7 @@ name: EthSign to SideStore Converter
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Daily at midnight UTC
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
@@ -30,12 +30,10 @@ jobs:
           from datetime import datetime
           from collections import defaultdict
 
-          # Configuration
           SOURCE_URL = "https://repo.ethsign.fyi/"
-          MAX_APPS = 50  # Safety limit
-          DEFAULT_ICON = "https://paradoxtime.tk/img/pdt_logo_nobg_shadow.png"
+          DEFAULT_DESCRIPTION = "No description available"
+          DEFAULT_ICON = "https://paradoxtime.tk/img/default_icon.png"
 
-          # Fetch source data
           try:
               response = requests.get(SOURCE_URL, timeout=15)
               response.raise_for_status()
@@ -44,81 +42,53 @@ jobs:
               print(f"🚨 Error fetching source: {e}")
               exit(1)
 
-          # Process apps
           output = {
               "name": "EthSign (SideStore)",
               "identifier": "ethsign.sidestore",
               "iconURL": DEFAULT_ICON,
-              "website": "https://repo.ethsign.fyi",
               "apps": []
           }
 
-          seen_bundles = set()
-          for app in src_data.get("apps", [])[:MAX_APPS]:
-              # Skip invalid or duplicate apps
+          for app in src_data.get("apps", []):
+              # Skip apps missing required fields
               if not all(k in app for k in ["name", "bundleIdentifier", "version", "downloadURL"]):
                   continue
-              if app["bundleIdentifier"] in seen_bundles:
-                  continue
-              seen_bundles.add(app["bundleIdentifier"])
 
-              # Validate icon URL
-              icon_url = app.get("iconURL", "")
-              if not icon_url.startswith(('http://', 'https://')):
-                  icon_url = DEFAULT_ICON
-
-              # Build version entry
+              # Ensure all version fields exist
               version_entry = {
                   "version": app["version"],
                   "date": app.get("versionDate", datetime.now().strftime("%Y-%m-%d")),
                   "downloadURL": app["downloadURL"],
-                  "size": app.get("size", 10000000),  # Default 10MB
-                  "localizedDescription": app.get("localizedDescription", "No description available")
+                  "size": app.get("size", 10000000),
+                  "localizedDescription": app.get("localizedDescription", DEFAULT_DESCRIPTION)
               }
 
-              # Build app entry
-              output["apps"].append({
+              # Ensure all app fields exist
+              app_entry = {
                   "name": app["name"],
                   "bundleIdentifier": app["bundleIdentifier"],
                   "developerName": app.get("developerName", "Unknown"),
-                  "iconURL": icon_url,
-                  "versions": [version_entry]  # Single-version for stability
-              })
+                  "iconURL": app.get("iconURL", DEFAULT_ICON),
+                  "localizedDescription": app.get("localizedDescription", DEFAULT_DESCRIPTION),
+                  "versions": [version_entry]
+              }
 
-          # Save output
+              output["apps"].append(app_entry)
+
           with open("ethsign-sidestore.json", "w") as f:
               json.dump(output, f, indent=2)
-          print(f"✅ Generated repo with {len(output['apps'])} apps")  # FIXED: Added missing parenthesis
+          print(f"✅ Generated repo with {len(output['apps'])} apps")
           EOF
 
       - name: Validate JSON
         run: |
-          pip install jsonschema
           python -c "
-          import json, jsonschema
-          schema = {
-            'type': 'object',
-            'required': ['name', 'identifier', 'apps'],
-            'properties': {
-              'apps': {
-                'type': 'array',
-                'items': {
-                  'required': ['name', 'bundleIdentifier', 'versions'],
-                  'properties': {
-                    'versions': {
-                      'type': 'array',
-                      'items': {
-                        'required': ['version', 'downloadURL']
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
+          import json
           with open('ethsign-sidestore.json') as f:
-            jsonschema.validate(json.load(f), schema)
-          print('✅ JSON validation passed')
+              data = json.load(f)
+              assert all('localizedDescription' in app for app in data['apps']), 'Missing localizedDescription'
+              assert all('localizedDescription' in v for app in data['apps'] for v in app['versions']), 'Missing version descriptions'
+          print('✅ All descriptions present')
           "
 
       - name: Commit changes
