--- a/.github/workflows/ethsign.yml
+++ b/.github/workflows/ethsign.yml
@@ -1,4 +1,4 @@
-name: EthSign to SideStore Converter
+name: EthSign to AltStore Converter
 
 on:
   schedule:
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: pip install requests
 
-      - name: Convert EthSign to SideStore format
+      - name: Convert to AltStore format
         run: |
           python <<EOF
           import requests
@@ -31,8 +31,8 @@ jobs:
 
           # Configuration
           SOURCE_URL = "https://repo.ethsign.fyi/"
-          DEFAULT_DESC = "App from EthSign repository"
           DEFAULT_ICON = "https://paradoxtime.tk/img/pdt_logo_nobg_shadow.png"
+          DEFAULT_TINT = "#FF6B6B"
 
           # Fetch source
           print("🔄 Fetching EthSign repo...")
@@ -44,12 +44,17 @@ jobs:
               print(f"❌ Error fetching source: {e}")
               exit(1)
 
-          # Transform data
+          # Transform to AltStore format
           output = {
               "name": "EthSign Apps",
-              "identifier": "ethsign.sidestore",
+              "subtitle": "Apps from EthSign repository",
+              "description": "Collection of modified apps from EthSign",
               "iconURL": DEFAULT_ICON,
-              "apps": []
+              "website": "https://repo.ethsign.fyi",
+              "tintColor": DEFAULT_TINT,
+              "featuredApps": [],
+              "apps": [],
+              "news": []
           }
 
           # Process apps
@@ -58,43 +63,57 @@ jobs:
               if not all(k in app for k in ["name", "bundleIdentifier", "version", "downloadURL"]):
                   continue
 
-              # Build version entry with guaranteed description
+              # Build version entry
               version_entry = {
                   "version": app["version"],
                   "date": app.get("versionDate", datetime.now().strftime("%Y-%m-%d")),
                   "downloadURL": app["downloadURL"],
                   "size": app.get("size", 10000000),
-                  "localizedDescription": app.get("localizedDescription", DEFAULT_DESC)
+                  "localizedDescription": app.get("localizedDescription", "Modified app from EthSign")
               }
 
-              # Build app entry with guaranteed description
+              # Build app entry
               output["apps"].append({
                   "name": app["name"],
                   "bundleIdentifier": app["bundleIdentifier"],
-                  "developerName": app.get("developerName", "Unknown"),
+                  "developerName": app.get("developerName", "Unknown Developer"),
+                  "subtitle": app.get("subtitle", "Modified app"),
+                  "localizedDescription": app.get("localizedDescription", "Modified app from EthSign repository"),
                   "iconURL": app.get("iconURL", DEFAULT_ICON),
-                  "localizedDescription": app.get("localizedDescription", DEFAULT_DESC),
-                  "versions": [version_entry]
+                  "tintColor": DEFAULT_TINT,
+                  "category": "other",
+                  "versions": [version_entry],
+                  "appPermissions": {
+                      "entitlements": [],
+                      "privacy": {}
+                  }
               })
 
           # Save output
-          with open("ethsign-sidestore.json", "w") as f:
+          with open("altstore-source.json", "w") as f:
               json.dump(output, f, indent=2)
           print(f"✅ Successfully converted {len(output['apps'])} apps")
           EOF
 
-      - name: Verify JSON
+      - name: Validate JSON
         run: |
-          if ! jq empty ethsign-sidestore.json; then
+          if ! jq empty altstore-source.json; then
             echo "❌ Invalid JSON structure"
             exit 1
           fi
           echo "✅ Valid JSON structure"
 
+          # Check required AltStore fields
+          if ! jq -e '.name and .identifier and .apps[].name and .apps[].bundleIdentifier and .apps[].versions[].downloadURL' altstore-source.json >/dev/null; then
+            echo "❌ Missing required AltStore fields"
+            exit 1
+          fi
+          echo "✅ All required fields present"
+
       - name: Commit changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add ethsign-sidestore.json
+          git add altstore-source.json
           git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update: $(date +'%Y-%m-%d %H:%M')"
           git push
